# grep-rust

./: .gitignore  Cargo.toml  README.md  pyproject.toml  your_program.sh
.codecrafters/: run.sh
assets/: benchmark.json
assets/bench/: benchmark.json
bench/: bench.py  benchmark.json  gen-bench-data.sh  plot.py
benches/: engine.rs  search.rs
benches/common/: engine.rs  search.rs
scripts/: bench.py  bench.sh  gen-bench-data.sh  plot.py
src/: lib.rs  main.rs  match.rs  parser.rs  pattern.rs  search_runner.rs
src/engine/: automata.rs  backref.rs  classify.rs  literal.rs  mod.rs
src/engine/backref/: ast.rs  mod.rs  parser.rs  runtime.rs
src/tests/: mod.rs
