# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "grep-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive"] }
crossbeam-channel = "0.5.15"
memmap2 = "0.9.10"
regex-automata = "0.4.14"
thiserror = "2.0.18"

[dev-dependencies]
criterion = "0.8.2"

[profile.release]
debug = true

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "search"
harness = false
